package performance_tests

import (
	"context"
	"fmt"
	"sync"
	"testing"
	"time"
)

// Mock database operations for performance testing
type MockDatabaseOperations struct {
	// No real database connection needed for mocking
}

func NewMockDatabaseOperations() *MockDatabaseOperations {
	// In real tests, this would connect to a test database
	// For performance testing, we'll mock the operations
	return &MockDatabaseOperations{}
}

func (m *MockDatabaseOperations) InsertFeed(ctx context.Context, title, description, link string, published time.Time) error {
	// Simulate database insert operation
	time.Sleep(1 * time.Millisecond) // Simulate DB latency
	return nil
}

func (m *MockDatabaseOperations) SelectFeeds(ctx context.Context, limit int) ([]map[string]interface{}, error) {
	// Simulate database select operation
	time.Sleep(time.Duration(limit/10) * time.Millisecond) // Simulate proportional latency

	results := make([]map[string]interface{}, limit)
	for i := 0; i < limit; i++ {
		results[i] = map[string]interface{}{
			"id":          i + 1,
			"title":       fmt.Sprintf("Feed Title %d", i+1),
			"description": fmt.Sprintf("Feed Description %d", i+1),
			"link":        fmt.Sprintf("http://example.com/feed%d", i+1),
			"published":   time.Now().Add(-time.Duration(i) * time.Hour),
		}
	}
	return results, nil
}

func (m *MockDatabaseOperations) UpdateFeedStatus(ctx context.Context, feedID int, status string) error {
	// Simulate database update operation
	time.Sleep(500 * time.Microsecond) // Simulate DB latency
	return nil
}

func (m *MockDatabaseOperations) DeleteFeed(ctx context.Context, feedID int) error {
	// Simulate database delete operation
	time.Sleep(500 * time.Microsecond) // Simulate DB latency
	return nil
}

func (m *MockDatabaseOperations) CountFeeds(ctx context.Context) (int, error) {
	// Simulate database count operation
	time.Sleep(2 * time.Millisecond) // Simulate DB latency
	return 12345, nil
}

func BenchmarkDatabaseInsertOperations(b *testing.B) {
	db := NewMockDatabaseOperations()
	ctx := context.Background()

	b.ResetTimer()
	for i := 0; i < b.N; i++ {
		err := db.InsertFeed(ctx,
			fmt.Sprintf("Title %d", i),
			fmt.Sprintf("Description %d", i),
			fmt.Sprintf("http://example.com/feed%d", i),
			time.Now())
		if err != nil {
			b.Fatalf("Insert failed: %v", err)
		}
	}
}

func BenchmarkDatabaseSelectOperations(b *testing.B) {
	db := NewMockDatabaseOperations()
	ctx := context.Background()

	tests := []struct {
		name  string
		limit int
	}{
		{"small_select", 10},
		{"medium_select", 100},
		{"large_select", 1000},
	}

	for _, tt := range tests {
		b.Run(tt.name, func(b *testing.B) {
			b.ResetTimer()
			for i := 0; i < b.N; i++ {
				results, err := db.SelectFeeds(ctx, tt.limit)
				if err != nil {
					b.Fatalf("Select failed: %v", err)
				}
				if len(results) != tt.limit {
					b.Fatalf("Expected %d results, got %d", tt.limit, len(results))
				}
			}
		})
	}
}

func BenchmarkConcurrentDatabaseOperations(b *testing.B) {
	db := NewMockDatabaseOperations()
	ctx := context.Background()

	b.ResetTimer()
	b.RunParallel(func(pb *testing.PB) {
		for pb.Next() {
			// Mix of different operations
			switch b.N % 4 {
			case 0:
				db.InsertFeed(ctx, "Title", "Description", "http://example.com", time.Now())
			case 1:
				db.SelectFeeds(ctx, 10)
			case 2:
				db.UpdateFeedStatus(ctx, 1, "read")
			case 3:
				db.CountFeeds(ctx)
			}
		}
	})
}

func TestDatabaseConnectionPooling(t *testing.T) {
	// Test database performance under connection pooling scenarios
	db := NewMockDatabaseOperations()
	ctx := context.Background()

	concurrentUsers := []int{1, 5, 10, 25, 50, 100}
	operationsPerUser := 50

	for _, userCount := range concurrentUsers {
		t.Run(fmt.Sprintf("users_%d", userCount), func(t *testing.T) {
			var wg sync.WaitGroup
			start := time.Now()

			for i := 0; i < userCount; i++ {
				wg.Add(1)
				go func(userID int) {
					defer wg.Done()
					for j := 0; j < operationsPerUser; j++ {
						// Mix of operations
						switch j % 3 {
						case 0:
							err := db.InsertFeed(ctx, fmt.Sprintf("User%d-Feed%d", userID, j), "Description", "http://example.com", time.Now())
							if err != nil {
								t.Errorf("Insert failed for user %d: %v", userID, err)
							}
						case 1:
							_, err := db.SelectFeeds(ctx, 10)
							if err != nil {
								t.Errorf("Select failed for user %d: %v", userID, err)
							}
						case 2:
							err := db.UpdateFeedStatus(ctx, j, "read")
							if err != nil {
								t.Errorf("Update failed for user %d: %v", userID, err)
							}
						}
					}
				}(i)
			}

			wg.Wait()
			duration := time.Since(start)

			totalOperations := userCount * operationsPerUser
			throughput := float64(totalOperations) / duration.Seconds()

			t.Logf("Users: %d, Operations: %d, Duration: %v, Throughput: %.2f ops/sec",
				userCount, totalOperations, duration, throughput)

			// Ensure reasonable performance
			minThroughput := 100.0 // operations per second
			if throughput < minThroughput {
				t.Errorf("Database throughput too low: %.2f < %.2f ops/sec", throughput, minThroughput)
			}
		})
	}
}

func TestDatabaseTransactionPerformance(t *testing.T) {
	db := NewMockDatabaseOperations()
	ctx := context.Background()

	batchSizes := []int{1, 10, 50, 100, 500}

	for _, batchSize := range batchSizes {
		t.Run(fmt.Sprintf("batch_size_%d", batchSize), func(t *testing.T) {
			start := time.Now()

			// Simulate batch transaction
			for i := 0; i < batchSize; i++ {
				err := db.InsertFeed(ctx,
					fmt.Sprintf("Batch Title %d", i),
					fmt.Sprintf("Batch Description %d", i),
					fmt.Sprintf("http://example.com/batch%d", i),
					time.Now())
				if err != nil {
					t.Fatalf("Batch insert %d failed: %v", i, err)
				}
			}

			duration := time.Since(start)
			throughput := float64(batchSize) / duration.Seconds()

			t.Logf("Batch size: %d, Duration: %v, Throughput: %.2f inserts/sec",
				batchSize, duration, throughput)

			// Larger batches should generally be more efficient
			minThroughput := 50.0 // minimum inserts per second
			if throughput < minThroughput {
				t.Errorf("Batch throughput too low: %.2f < %.2f inserts/sec", throughput, minThroughput)
			}
		})
	}
}

func TestDatabaseQueryComplexity(t *testing.T) {
	db := NewMockDatabaseOperations()
	ctx := context.Background()

	// Test queries of different complexity/size
	querySizes := []int{1, 10, 100, 1000, 5000}

	for _, size := range querySizes {
		t.Run(fmt.Sprintf("query_size_%d", size), func(t *testing.T) {
			start := time.Now()

			results, err := db.SelectFeeds(ctx, size)
			if err != nil {
				t.Fatalf("Query failed: %v", err)
			}

			duration := time.Since(start)

			if len(results) != size {
				t.Errorf("Expected %d results, got %d", size, len(results))
			}

			// Log performance metrics
			t.Logf("Query size: %d, Duration: %v, Rate: %.2f records/ms",
				size, duration, float64(size)/float64(duration.Nanoseconds()/1000000))

			// Ensure queries don't take excessively long
			maxDuration := time.Duration(size/5)*time.Millisecond + 200*time.Millisecond
			if duration > maxDuration {
				t.Errorf("Query took too long: %v > %v for %d records", duration, maxDuration, size)
			}
		})
	}
}

func BenchmarkDatabaseIndexPerformance(b *testing.B) {
	db := NewMockDatabaseOperations()
	ctx := context.Background()

	// Simulate queries that would benefit from different indexes
	queries := []struct {
		name      string
		operation func() error
	}{
		{
			name: "by_id_lookup",
			operation: func() error {
				// Simulate lookup by primary key
				_, err := db.SelectFeeds(ctx, 1)
				return err
			},
		},
		{
			name: "by_date_range",
			operation: func() error {
				// Simulate date range query
				_, err := db.SelectFeeds(ctx, 50)
				return err
			},
		},
		{
			name: "count_operation",
			operation: func() error {
				// Simulate count query
				_, err := db.CountFeeds(ctx)
				return err
			},
		},
	}

	for _, query := range queries {
		b.Run(query.name, func(b *testing.B) {
			b.ResetTimer()
			for i := 0; i < b.N; i++ {
				err := query.operation()
				if err != nil {
					b.Fatalf("Query %s failed: %v", query.name, err)
				}
			}
		})
	}
}

func TestDatabaseFailureRecovery(t *testing.T) {
	db := NewMockDatabaseOperations()
	ctx := context.Background()

	// Test performance during simulated failure scenarios
	tests := []struct {
		name           string
		failureRate    float64 // 0.0 to 1.0
		operationCount int
	}{
		{"no_failures", 0.0, 100},
		{"low_failure_rate", 0.1, 100},
		{"medium_failure_rate", 0.2, 100},
		{"high_failure_rate", 0.5, 100},
	}

	for _, tt := range tests {
		t.Run(tt.name, func(t *testing.T) {
			start := time.Now()
			successCount := 0
			failureCount := 0

			for i := 0; i < tt.operationCount; i++ {
				// Simulate failures based on failure rate
				shouldFail := float64(i%100)/100.0 < tt.failureRate

				if shouldFail {
					failureCount++
					// Simulate retry delay
					time.Sleep(5 * time.Millisecond)
				} else {
					err := db.InsertFeed(ctx, fmt.Sprintf("Title %d", i), "Description", "http://example.com", time.Now())
					if err != nil {
						failureCount++
					} else {
						successCount++
					}
				}
			}

			duration := time.Since(start)
			successRate := float64(successCount) / float64(tt.operationCount)

			t.Logf("Test: %s, Success: %d/%d (%.1f%%), Duration: %v",
				tt.name, successCount, tt.operationCount, successRate*100, duration)

			// Verify that most operations succeed even with failures
			minSuccessRate := 1.0 - tt.failureRate - 0.1 // Allow 10% tolerance
			if successRate < minSuccessRate {
				t.Errorf("Success rate too low: %.2f < %.2f", successRate, minSuccessRate)
			}
		})
	}
}

func TestDatabaseMemoryUsage(t *testing.T) {
	db := NewMockDatabaseOperations()
	ctx := context.Background()

	// Test memory usage with large result sets
	resultSizes := []int{100, 1000, 5000, 10000}

	for _, size := range resultSizes {
		t.Run(fmt.Sprintf("result_size_%d", size), func(t *testing.T) {
			start := time.Now()

			results, err := db.SelectFeeds(ctx, size)
			if err != nil {
				t.Fatalf("Query failed: %v", err)
			}

			duration := time.Since(start)

			if len(results) != size {
				t.Errorf("Expected %d results, got %d", size, len(results))
			}

			// Process results to simulate real usage
			totalTitleLength := 0
			for _, result := range results {
				if title, ok := result["title"].(string); ok {
					totalTitleLength += len(title)
				}
			}

			t.Logf("Result size: %d, Duration: %v, Total title length: %d",
				size, duration, totalTitleLength)

			// Ensure memory usage is reasonable
			maxDuration := time.Duration(size/25)*time.Millisecond + 1*time.Second
			if duration > maxDuration {
				t.Errorf("Query took too long (possible memory issue): %v > %v for %d records",
					duration, maxDuration, size)
			}
		})
	}
}
